# openldap-schema-converter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
src/openldap_schema_converter/: __init__.py  cli.py  converter.py  exceptions.py  utils.py
src/openldap_schema_converter/handler/: __init__.py  base.py  json.py  ldif.py  schema.py
tests/: __init__.py  test_cli.py  test_utils.py
tests/schema/ldif/: test.ldif
tests/schema/schema/: test.schema
